--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
-        android:text="Informe o seu peso"
+        android:text=""
         android:textColor="@color/dark_blue"
         android:textSize="24sp" />
 </LinearLayout>
