--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
         android:hint="Altura"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:padding="20dp"
         android:textColorHint="@color/dark_blue" />
 
